[metadata]
name = tornado_web_server
version = 1.0
author = Mukul Majmudar
author_email = mukul.majmudar@gmail.com
description = Clean startup and shutdown for Tornado web servers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mukulmajmudar/tornado_web_server
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.7
package_dir =
    = src
packages = find:
install_requires =
    tornado >= 5.0
    asyncio_application @ git+https://github.com/mukulmajmudar/asyncio_application

[options.packages.find]
where = src
